# mstair-common

./: .editorconfig  .gitattributes  .gitignore  .markdownlint.jsonc  .prettierrc.json  .prettierrc.yaml  .pylintrc  .pylintrc.toml  .typings.txt  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  TODO.md  makefile-old.mak  makefile-rules.mak  makefile.mak  mstair-common.code-workspace  mypy.ini  pyproject.toml  pyrightconfig.json  requirements.txt  ruff.toml  setup.py  taplo.toml  vulture.ini
.github/: CODING_STANDARDS.md  ai-agent-guide.md  copilot-instructions.md  copilot-quick-context.md
make/: 00-globals.mk  30-clean.mk  40-venv.mk  50-install.mk  60-docs.mk  70-test.mk  80-dist.mk  90-helpers.mk
scripts/: runner-template  runner-template.cmd  sitecustomize.py
scripts/venv-shims/: Activate.ps1  activate  activate.bat  activate.fish  python3
src/: scan_missing_stubs.py
src/mstair/: __init__.py
src/mstair/common/: __init__.py  format_helpers.py  scan_missing_stubs.py  test_format_helpers.py  tokenize_helpers.py  update_pyproject_version.py  vscode_settings_diff.py
src/mstair/common/base/: __init__.py  accessor_mixin.py  bbox.py  caller_module_name_and_level.py  config.py  constants.py  context_managers.py  datetime_helpers.py  email.py  english_helpers.py  file_discovery.py  fs_helpers.py  git_helpers.py  interpolate.py  mapping_helpers.py  network_helpers.py  nltk_helpers.py  normalize_helpers.py  os_helpers.py  path_concat.py  string_helpers.py  temp_dir.py  test_context_managers.py  trailing_modules.py  types.py
src/mstair/common/io/: __init__.py  display_formatter.py  logging_utils.py  test_display_formatter.py  test_logging_utils.py
src/mstair/common/xdumps/: __init__.py  customizer_registry.py  model.py  test_xdumps.py  token_stream.py  view.py  xdumps_api.py
src/mstair/common/xlogging/: __init__.py  color_logger.py  core_logger.py  frame_analyzer.py  logger_constants.py  logger_factory.py  logger_formatter.py  logger_util.py  test_core_logger_root_level.py  test_logger_util.py  test_sys_excepthook_obsolete.py
src/mstair_common.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_common_file_headers.py  test_common_version_bump.py
tools/: scan_missing_stubs.py  update_pyproject_version.py  vscode_settings_diff.py
